Had to fix up some spacing on the homepage.

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	width: 70%;
-	padding-top: 20%;
+	padding-top: 5%;
 	padding-bottom: 5%;
 }
 
